traversal.zigzag.traversalzigzag.TraversalZigZag.scala.error
Erreur de compilation :
TraversalZigZag:14: error: not found: value setPose
  if(x==0 && !isPair(y)){setPos(0,y+1)}else if((x+1)==getMondeLargeur() && isPair(y)){setPos(x,y+1)}else if(!isPair(y)){setPose(x+1,y)}else{setPos(x-1,y)} }
                                                                                                                        ^TraversalZigZag:24: error: type mismatch;
 found   : Unit
 required: Boolean
     a=avanceCrois()}while(!estPosiFin())
                  ^