traversal.zigzag.traversalzigzag.TraversalZigZag.scala.code
def estPosiFin():Boolean={
  if(getX()+1==getMondeHauteur() && getY()+1==getMondeLargeur()){return true}
	return false}

def isPair(nb:Int):Boolean={
  var a=0
  while(a<nb){a=a+2}
  if (a==nb){return true}
  return false
}

def avanceCrois(){
  var x=getX()
  var y=getY()
	if(x==0 && !isPair(y)){setPos(0,y+1)}else if((x+1)==getMondeLargeur() && isPair(y)){setPos(x,y+1)}else if(!isPair(y)){setPose(x+1,y)}else{setPos(x-1,y)} }




override def run() {
  var mark=0
	var a=true 
  do{ecritMessage(mark)
     mark=mark+1
     a=avanceCrois()}while(!estPosiFin())
  ecritMessage(mark)
}